# Group_rust_learning_project

./: README.md
clinews_app/: .gitignore  Cargo.toml  README.md
clinews_app/newsapi/: Cargo.toml
clinews_app/newsapi/src/: lib.rs
clinews_app/src/: main.rs  theme.rs
computer_graphics_rust/: Cargo.toml
computer_graphics_rust/src/: lib.rs  main.rs
minigrep/: output.txt
minigrep/src/: lib.rs  main.rs
ml_ai_rust/: Cargo.toml
ml_ai_rust/src/: main.rs
ml_ai_rust/src/lib/: activations.rs  matrix.rs  mod.rs  network.rs
os_in_rust/: Cargo.toml  ReadMe.md
os_in_rust/.cargo/: config.toml
os_in_rust/src/: main.rs
redis_clone/: Cargo.toml  Readme.md  spawn_server_lm.sh  spawn_server_win.bat
redis_clone/src/: main.rs  resp.rs  resp_result.rs  server.rs
wgpu_tuto/: Cargo.toml
wgpu_tuto/examples/ch02/: common.rs  first_triangle.rs  triangle_shader.wgsl
wgpu_tuto/src/: main.rs
