[package]
name = "wgpu_tuto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.19.3"
cgmath = "0.18"
env_logger = "0.11.3"
futures = "0.3"
gfx-hal = "0.9"
image = "0.25"
log = "0.4"
pollster = "0.3"
winit = "0.29"
anyhow = "1.0"
