[package]
name = "wgpu_tuto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]] 
name = "ch02_first_triangle" 
path = "examples/ch02/first_triangle.rs"

[dependencies]
wgpu = "0.11.0"
cgmath = "0.18"
env_logger = "0.11.3"
futures = "0.3"
gfx-hal = "0.9"
image = "0.23"
log = "0.4"
pollster = "0.2"
winit = "0.25"
anyhow = "1.0"
